# web-services-uni

./: README.md  flake.nix
.github/workflows/: deploy.yml  test.yml
task_1/: .gitignore  Cargo.toml  README.md
task_1/entity/: Cargo.toml
task_1/entity/src/: book.rs  lib.rs  prelude.rs
task_1/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250629_220002_add_columns.rs
task_1/src/: main.rs
task_2/: Cargo.toml  README.md  docker-compose.yml
task_2/entity/: Cargo.toml
task_2/entity/src/: lib.rs  order.rs  order_item.rs  prelude.rs
task_2/migration/: Cargo.toml
task_2/migration/src/: m20220101_000001_create_table.rs
task_2/src/: main.rs
task_3/: .gitignore  Cargo.toml  README.md
task_3/src/: google.rs  main.rs
task_3/src/google/: api.rs  oauth2.rs
task_4/: .gitignore  Cargo.toml
task_4/entity/: Cargo.toml
task_4/entity/src/: refresh_token.rs  user.rs
task_4/migration/src/: m20220101_000001_create_table.rs
task_4/src/: main.rs
task_5/: README.md  setup-k8s.sh
task_5/borrowing_service/: .env  Cargo.toml  Dockerfile  borrowing.db  deployment.yml  public.pem  service.yml
task_5/borrowing_service/entity/: Cargo.toml
task_5/borrowing_service/entity/src/: borrowing_history.rs  current_borrowing.rs  lib.rs  prelude.rs
task_5/borrowing_service/migration/src/: m20220101_000001_create_table.rs
task_5/borrowing_service/src/: main.rs
task_5/library_service/: .env  .gitignore  Cargo.toml  Dockerfile  books.db  deployment.yml  service.yml
task_5/library_service/entity/src/: book.rs  lib.rs  prelude.rs
task_5/library_service/migration/src/: m20220101_000001_create_table.rs
task_5/library_service/src/: main.rs
task_5/user_service/: .env  Cargo.toml  Dockerfile  deployment.yml  private.pem  service.yml  users.db
task_5/user_service/entity/src/: prelude.rs  user.rs
task_5/user_service/migration/src/: lib.rs  m20260106_220803_add_user_role.rs
task_5/user_service/src/: main.rs
task_6/: .gitignore  Cargo.toml
task_6/entity/: Cargo.toml
task_6/migration/: Cargo.toml
task_6/migration/src/: m20220101_000001_create_table.rs
task_6/src/: main.rs
task_7/: .env  .gitignore  Cargo.toml  users.db
task_7/entity/src/: lib.rs  user.rs
task_7/src/: game_server.rs  main.rs  user_service.rs  ws_session.rs
task_7/static/: index.html  login.html  registration.html
