[package]
name = "task_1"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-actix"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
entity = {path = "entity"}
