[package]
name = "task_2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-actix", "with-time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
entity = { path = "./entity" }
derive_more = { version = "2.0.1", features = ["from_str", "display"] }
log = "0.4.27"
time = "0.3.41"
