[package]
name = "task_3"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
derive_more = { version = "2.0.1", features = ["display", "error", "try_from"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
