[package]
name = "task_4"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-actix"] }
entity = { path = './entity' }
serde = "1.0.228"
serde_json = "1.0.147"
bcrypt = "0.17.1"
rand = "0.9.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
anyhow = "1.0.100"
actix-web-httpauth = "0.8.2"
chrono = "0.4.42"
base64 = "0.22.1"
