[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
sea-orm = { version = "1.1.19", features = ["runtime-actix", "sqlx-sqlite"] }
entity = { path = './entity' }
serde = "1.0.228"
serde_json = "1.0.147"
bcrypt = "0.17.1"
rand = "0.9.2"
anyhow = "1.0.100"
actix-web-httpauth = "0.8.2"
chrono = "0.4.42"
base64 = "0.22.1"
actix = "0.13.5"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
migration = { version = "0.1.0", path = "migration" }
env_logger = "0.11.8"
