[package]
name = "task_7"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.9"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
