[package]
name = "task_7"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.9"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
anyhow = "1.0.100"
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = "0.4.42"
entity = { version = "0.1.0", path = "entity" }
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"
rand = "0.9.2"
sea-orm = { version = "1.1.19", features = ["runtime-actix", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
