[package]
name = "borrowing_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.100"
chrono = "0.4.42"
entity = { version = "0.1.0", path = "entity" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = "0.13.1"
sea-orm = { version = "1.1.19", features = ["runtime-actix", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
